--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -393,7 +393,7 @@ visitFact_conn <- tbl(conn5, dbplyr::ident_q('"Caboodle"."VisitFact"'))
 ```{r Report Variables, echo = FALSE, warning = FALSE, message = FALSE}
 
 report_run_date <- Sys.Date()
-date_start <- format(Sys.Date(), "%Y-%m-%d")
+date_start <- format(Sys.Date() +1, "%Y-%m-%d")
 date_start_next30 <- format(Sys.Date() + 30, "%Y-%m-%d")
 date_start_next90 <- format(Sys.Date() + 90, "%Y-%m-%d")
 
@@ -629,7 +629,7 @@ block_distribution <- block_distribution %>%
 # Individual/Combination Blocks next 90 Days ------------------------------------
 block_error <- slot_data_prc_tbl %>%
   # filter(year(SLOT_BEGIN_TIME) == current_year) %>%
-   filter(SLOT_BEGIN_TIME > TO_DATE(date_start, "YYYY-MM-DD HH24:MI:SS")) %>%
+   filter(SLOT_BEGIN_TIME >= TO_DATE(date_start, "YYYY-MM-DD HH24:MI:SS")) %>%
   filter(SLOT_BEGIN_TIME <= TO_DATE(date_start_next30, "YYYY-MM-DD HH24:MI:SS")) %>%
   # filter(PROV_ID == "1410756") %>%
   # filter(DEPARTMENT_ID == "8827031") %>%
@@ -689,7 +689,7 @@ block_error <- block_error %>%
 # Open Slots in next 30 days ---------------------------------------------------
 open_slots <- slot_data_prc_tbl %>%
   # filter(year(SLOT_BEGIN_TIME) == current_year) %>%
-  filter(SLOT_BEGIN_TIME > TO_DATE(date_start, "YYYY-MM-DD HH24:MI:SS")) %>%
+  filter(SLOT_BEGIN_TIME >= TO_DATE(date_start, "YYYY-MM-DD HH24:MI:SS")) %>%
   filter(SLOT_BEGIN_TIME <= TO_DATE(date_start_next30, "YYYY-MM-DD HH24:MI:SS")) %>%
   # filter(PROV_ID == "1410756") %>%
   # filter(DEPARTMENT_ID == "8827031") %>%
@@ -730,7 +730,7 @@ open_slots <- slot_data_prc_tbl %>%
 
 
 open_slots_summary <- open_slots %>%
-  group_by(MSHS, SITE, DEPT_SPECIALTY_NAME, DEPARTMENT_ID, DEPARTMENT_NAME, PROV_ID, PROV_NM_WID,
+  group_by(MSHS, SITE, DEPT_SPECIALTY_NAME, DEPARTMENT_ID, DEPARTMENT_NAME, PROV_ID, PROV_NM_WID, PROV_TYPE, ACTIVE_STATUS,
            slot_year, slot_month, slot_date) %>%
   summarise(reg_openings = sum(REG_AVAIL_OPENINGS),
             sched_num = sum(SCHED_NUM),
